Terumo Partdev/src/objects/Error_Log__c.object
<CustomObject>
    <description>nsebastian 11/15/2015: This object is used to capture the errors from our code related functionalities</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>nsebastian 11/15/2015: This is the class name associated to the error.</description>
        <inlineHelpText>The class name associated to the error</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>nsebastian 11/15/2015: This field captures the error or exception message</description>
        <inlineHelpText>Error or exception message</inlineHelpText>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>nsebastian 11/15/2015: This field stores the type of exception thrown</description>
        <inlineHelpText>The type of exception thrown</inlineHelpText>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>nsebastian 11/15/2015 : This is the apex class method associated to the error.</description>
        <inlineHelpText>The apex method associated to the error</inlineHelpText>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ERROR-{000000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>